# accelerate-camera-sandbox

./: LICENSE  README.md  accelerate-camera-sandbox.cabal  stack.yaml
app/american-incontinence/: Main.hs
app/camera-sandbox/: Config.hs  Main.hs
app/image/: Main.hs
src/: ColorCamera.hs  InputArray.hs
src/Acc/: Gaussian.hs  Gradient.hs  Lift.hs  Stencil.hs  Transpose.hs  Types.hs
src/Fluid/: Config.hs  Config.hs.orig  Fluid.hs  Pipe.hs  Type.hs
src/Pipes/: Disk.hs  Formats.hs
